<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@mipmap/home_setting_bg">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@mipmap/user_default_avatar" />

        <Button
            android:id="@+id/user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:text="马上登录"
            android:textColor="#ffffff"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_collection"
                        style="@style/login_setting_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:drawablePadding="8dp"
                        android:gravity="center_horizontal"
                        android:text="@string/login_txt_collect" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_mode"
                    style="@style/login_setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:text="@string/login_txt_state_day" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:divider="@drawable/login_mysetting_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <RelativeLayout
                    android:id="@+id/layout_read_history"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_read_history"
                        style="@style/login_setting_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_read_history" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_message"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_message"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_message" />

                    <ImageView
                        android:id="@+id/image_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                    <ImageView
                        android:id="@+id/img_message_redDot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8dp"
                        android:layout_toLeftOf="@id/image_arrow"
                        android:gravity="center_vertical"
                         />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_backguide"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_backguide"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_back_cover" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_skin_manage"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_skin_manage"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="皮肤中心" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/part2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:divider="@drawable/login_mysetting_divider"
                android:orientation="vertical"
                android:showDividers="middle"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/layout_cooperative_extension"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_cooperative_extension"
                        style="@style/login_setting_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_cooperative_extension" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/paidServiceLayout"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/paidServiceTV"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"
                        android:text="@string/login_txt_paidServiceTV" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/part3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:divider="@drawable/login_mysetting_divider"
                android:orientation="vertical"
                android:showDividers="middle">

                <RelativeLayout
                    android:id="@+id/layout_help"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_help"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_help" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_feedback"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_feedback"
                        style="@style/login_setting_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center_vertical"
                        android:text="@string/login_txt_feed_back" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_system_setting"
                    style="@style/login_setting_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_system_setting"
                        style="@style/login_setting_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/login_txt_system_setting" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center_vertical"
                        android:src="@mipmap/my_arrow" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/part4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:showDividers="middle">

                <Button
                    android:id="@+id/btn_logout"
                    style="@style/login_setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    android:text="@string/login_txt_logout"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_exit"
                    style="@style/login_setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:text="@string/login_txt_exit"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
